Spring Data Cassandra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.thymeleaf.cache=false
-spring.datasource.generate-unique-name=false
-spring.datasource.name=shavermashop
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=shavermashop
+spring.data.cassandra.keyspace-name=shavermashop
+spring.data.cassandra.schema-action=recreate
+spring.data.cassandra.local-datacenter=datacenter1
+
