Chapter 4 Spring Data MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.thymeleaf.cache=false
 #spring.datasource.generate-unique-name=false
 #spring.datasource.name=shavermashop
-spring.data.cassandra.keyspace-name=shavermashop
-spring.data.cassandra.schema-action=recreate
-spring.data.cassandra.local-datacenter=datacenter1
+#spring.data.cassandra.keyspace-name=shavermashop
+#spring.data.cassandra.schema-action=recreate
+#spring.data.cassandra.local-datacenter=datacenter1
+spring.mongodb.embedded.version=3.5.5
 
